--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,6 +15,17 @@
         android:padding="20dp"
         android:orientation="horizontal">
 
+        <LinearLayout
+            android:id="@+id/llSelectedView"
+            android:layout_width="4dp"
+            android:layout_height="24dp"
+            android:layout_marginRight="10dp"
+            android:background="?selectedColorPrimary"
+            android:orientation="horizontal"
+            android:visibility="invisible">
+
+        </LinearLayout>
+
         <ImageView
             android:id="@+id/itemIcon"
             android:layout_width="30dp"
