--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,7 +1,9 @@
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/darkGray"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -9,33 +11,53 @@
         android:id="@+id/dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="Checking Servers Pings.."
-        android:textSize="18sp"
+        android:fontFamily="@font/museo_san_rounded700"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:textColor="@color/lightGray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_dialog_server_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
         android:text=""
+        android:fontFamily="@font/museo_san_rounded500"
         android:textSize="14sp"
-        android:gravity="center"/>
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />
 
     <TextView
         android:id="@+id/tv_dialog_server_ping"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
         android:text=""
-        android:textSize="12sp"
-        android:gravity="center"/>
+        android:fontFamily="@font/museo_san_rounded500"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_server_name" />
 
-    <Button
+    <TextView
         android:id="@+id/btn_dialog_cancel"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/museo_san_rounded500"
         android:text="Cancel"
-        android:layout_marginTop="16dp"/>
-</LinearLayout>
+        android:textSize="14sp"
+        android:textColor="@color/lightGray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_server_ping" />
+</androidx.constraintlayout.widget.ConstraintLayout>
