--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -129,6 +129,7 @@
         android:id="@+id/clPremium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:paddingRight="15dp"
