--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -67,6 +67,7 @@
         android:id="@+id/clTitels"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clPremium">
@@ -163,17 +164,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clPremiumPays"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clTitels">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl30Days"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/background_server_list"
             android:paddingLeft="30dp"
@@ -211,15 +212,15 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl90Days"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/background_server_list"
+            android:paddingLeft="30dp"
+            android:paddingTop="10dp"
+            android:paddingRight="30dp"
+            android:paddingBottom="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -229,8 +230,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/museo_san_rounded500"
                 android:text="90 Days"
-                android:textSize="16sp"
                 android:textColor="@color/white"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -242,8 +243,8 @@
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/museo_san_rounded500"
                 android:text="$5.0"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv90Days" />
@@ -251,8 +252,10 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl180Days"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/background_server_list"
             android:paddingLeft="30dp"
             android:paddingTop="10dp"
@@ -289,8 +292,10 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl365Days"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/background_server_list"
             android:paddingLeft="30dp"
             android:paddingTop="10dp"
@@ -324,6 +329,30 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv365Days" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clPayButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clPremiumPays">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnPremiumPay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_enter_btn"
+            android:fontFamily="@font/museo_san_rounded700"
+            android:text="PAY"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
