--- a/app/src/main/res/layout/activity_email_verify.xml
+++ b/app/src/main/res/layout/activity_email_verify.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmailVerify">
+    tools:context="vpn.EmailVerify">
 
     <ImageView
         android:id="@+id/login_background"
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/login_background" />
+        app:srcCompat="@drawable/background_dashboard" />
 
     <TextView
         android:id="@+id/textVerify"
