--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -53,12 +53,13 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/ivPowerIcon"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/connect"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/laPulseButton"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/pulse_button_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llHeader" />
@@ -74,10 +75,10 @@
         android:text="+30 min"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/ivPowerIcon"
-        app:layout_constraintTop_toTopOf="@+id/ivPowerIcon"
-        app:layout_constraintBottom_toBottomOf="@+id/ivPowerIcon"
-        app:layout_constraintEnd_toEndOf="@+id/ivPowerIcon" />
+        app:layout_constraintStart_toStartOf="@+id/laPulseButton"
+        app:layout_constraintTop_toTopOf="@+id/laPulseButton"
+        app:layout_constraintBottom_toBottomOf="@+id/laPulseButton"
+        app:layout_constraintEnd_toEndOf="@+id/laPulseButton" />
 
     <TextView
         android:id="@+id/tvTimer"
@@ -90,16 +91,16 @@
         android:text=""
         android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@+id/ivPowerIcon"
-        app:layout_constraintTop_toTopOf="@+id/ivPowerIcon"
-        app:layout_constraintBottom_toBottomOf="@+id/ivPowerIcon"
-        app:layout_constraintEnd_toEndOf="@+id/ivPowerIcon" />
+        app:layout_constraintStart_toStartOf="@+id/laPulseButton"
+        app:layout_constraintTop_toTopOf="@+id/laPulseButton"
+        app:layout_constraintBottom_toBottomOf="@+id/laPulseButton"
+        app:layout_constraintEnd_toEndOf="@+id/laPulseButton" />
 
     <TextView
         android:id="@+id/tvPowerState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ivPowerIcon"
+        android:layout_below="@id/laPulseButton"
         android:text="Connect"
         android:fontFamily="@font/museo_san_rounded700"
         android:layout_marginTop="10dp"
@@ -108,13 +109,13 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivPowerIcon" />
+        app:layout_constraintTop_toBottomOf="@+id/laPulseButton" />
 
     <TextView
         android:id="@+id/tvSelectedServer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ivPowerIcon"
+        android:layout_below="@id/laPulseButton"
         android:text=""
         android:fontFamily="@font/museo_san_rounded700"
         android:layout_marginTop="5dp"
