fix dashboard layout

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -55,8 +55,9 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/laPulseButton"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:layout_marginTop="-40dp"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/pulse_button_gray"
@@ -68,13 +69,12 @@
         android:id="@+id/tvAddTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
         android:layout_marginTop="100dp"
-        android:padding="5dp"
         android:fontFamily="@font/museo_san_rounded700"
+        android:padding="5dp"
         android:text="+30 min"
-        android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/laPulseButton"
         app:layout_constraintTop_toTopOf="@+id/laPulseButton"
         app:layout_constraintBottom_toBottomOf="@+id/laPulseButton"
@@ -84,13 +84,12 @@
         android:id="@+id/tvTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:visibility="invisible"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/museo_san_rounded700"
+        android:padding="5dp"
         android:text=""
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/laPulseButton"
         app:layout_constraintTop_toTopOf="@+id/laPulseButton"
         app:layout_constraintBottom_toBottomOf="@+id/laPulseButton"
@@ -101,11 +100,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/laPulseButton"
+        android:layout_marginTop="-50dp"
         android:text="Connect"
         android:fontFamily="@font/museo_san_rounded700"
-        android:layout_marginTop="10dp"
-        android:textSize="18sp"
-        android:textColor="@color/lightBlue"
+        android:textSize="14sp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +117,7 @@
         android:layout_below="@id/laPulseButton"
         android:text=""
         android:fontFamily="@font/museo_san_rounded700"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:textSize="18sp"
         android:textColor="@color/lightBlue"
         android:textStyle="bold"
@@ -158,7 +157,7 @@
             android:fontFamily="@font/museo_san_rounded500"
             android:text="Premium"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivPremium"
             app:layout_constraintTop_toTopOf="parent" />
